<resources>
    <string name="app_name">FretboardSuite</string>
    <string name="str_note_a">A</string>
    <string name="str_note_a_sharp">A#</string>
    <string name="str_note_b_flat">Bb</string>
    <string name="str_note_b">B</string>
    <string name="str_note_c">C</string>
    <string name="str_note_c_sharp">C#</string>
    <string name="str_note_d_flat">Db</string>
    <string name="str_note_d">D</string>
    <string name="str_note_d_sharp">D#</string>
    <string name="str_note_e_flat">Eb</string>
    <string name="str_note_e">E</string>
    <string name="str_note_f">F</string>
    <string name="str_note_f_sharp">F#</string>
    <string name="str_note_g_flat">Gb</string>
    <string name="str_note_g">G</string>
    <string name="str_note_g_sharp">G#</string>
    <string name="str_note_a_flat">Ab</string>
    <string name="str_start_button">Start!</string>
    <string name="str_select_label">Select the notes you want to practice:</string>



</resources>
